Changed AudioPage so that comedian name is formatted on separate lines via converter

--- a/Comedian Soundboard.Windows/AudioPage.xaml
+++ b/Comedian Soundboard.Windows/AudioPage.xaml
@@ -9,13 +9,16 @@
     d:DataContext="{Binding Source={d:DesignData Source=../Comedian Soundboard.Shared/DataModel/Soundboard.json, Type=data:SoundDataSource}}"
     xmlns:data="using:Comedian_Soundboard.Data"
     xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
+    xmlns:ValueConverter="using:Comedian_Soundboard.Converters"
     mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
             <EdgeUIThemeTransition></EdgeUIThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
-
+    <Page.Resources>
+        <ValueConverter:NameSplit x:Key="NameSplit" />
+    </Page.Resources>
     <Page.BottomAppBar>
         <CommandBar IsOpen="True" IsSticky="True">
             <AppBarButton Icon="Save" Label="Save Audio File" Click="Save_Clicked" />
@@ -48,7 +51,13 @@
         </Image>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="WrapWholeWords" MaxWidth="175" IsHitTestVisible="False" FontSize="35" FontWeight="Medium" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Category.Title}"></TextBlock>
+            <TextBlock IsHitTestVisible="False" 
+                       FontSize="35" 
+                       FontWeight="Medium"
+                       VerticalAlignment="Center" 
+                       TextAlignment="Center" 
+                       Text="{Binding Category.Title, Converter={StaticResource NameSplit}}" >
+            </TextBlock>
             <Grid Margin="20,0,0,0">
                 <Ellipse
                     Width="118"
