Fixed ratings launcher, updated Windows xaml

--- a/Comedian Soundboard.Windows/AudioPage.xaml
+++ b/Comedian Soundboard.Windows/AudioPage.xaml
@@ -29,7 +29,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height=".85*"></RowDefinition>
-            <RowDefinition Height="90"></RowDefinition>
+            <!--<RowDefinition Height="90"></RowDefinition>-->
         </Grid.RowDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="Assets/ComedyBackground2.jpg"></ImageBrush>
@@ -80,7 +80,6 @@
                 IsItemClickEnabled="True"
                 HorizontalAlignment="Stretch"
                 ItemsSource="{Binding SoundItems}"
-                ScrollViewer.VerticalScrollBarVisibility="Hidden"
                 SelectionMode="None">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
@@ -135,7 +134,7 @@
             </ListView>
         </Grid>
 
-        <Grid Grid.Row="2">
+        <!--<Grid Grid.Row="2">
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
         </Grid>
         <Grid Grid.Row="2" Margin="0,89,0,0">
@@ -157,6 +156,6 @@
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
-        </Grid>
+        </Grid>-->
     </Grid>
 </Page>
